# uie

./: .gitignore  pyproject.toml
src/inference/: engine.py  model.py  original.py
src/scripts/: image.py  video.py
